# fellowship-compliance

./: Cargo.toml  Dockerfile  Makefile  README.md  data.scale  docker-compose.yml
src/: chain.rs  html.rs  main.rs
static/: Orbitron.woff2.base64
templates/: header.stpl  main.js  members.stpl
