
[package]
name = "fellows"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["openssl"] }
badge-maker = "0.3.1"
cached = "0.46.1"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
fancy-regex = "0.13.0"
html-escape = "0.2.13"
log = "0.4.20"
openssl = { version = "0.10", features = ["v110"] }
parity-scale-codec = { version = "3.6.9", features = ["derive"] }
reqwest = "0.11.23"
sailfish = "0.8.3"
scale-info = "2.10.0"
serde = "1.0.193"
serde_json = "1.0.108"
sp-core = { version = "27.0.0", default-features = false, features = ["std"] }
subxt = "0.33.0"
tokio = "1.35.1"
